--- a/style/main.css
+++ b/style/main.css
@@ -159,7 +159,7 @@ h1 {
 @media (prefers-color-scheme: dark) {
     #intro {
         .img {
-            background-image: url(../sources/intro-dark.png);
+            background-image: url(../sources/intro/dark.png);
         }
     }
 
@@ -175,7 +175,7 @@ h1 {
 @media (prefers-color-scheme: light) {
     #intro {
         .img {
-            background-image: url(../sources/intro-light.png);
+            background-image: url(../sources/intro/light.png);
         }
     }
 
@@ -189,7 +189,6 @@ h1 {
 }
 
 @media (min-width: 900px) {
-
     #pagetitle,
     .authors,
     .changelogs {
@@ -206,16 +205,19 @@ h1 {
     }
 
     #collapsibleBtn {
-        padding: 35px 50px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 60px;
+        padding-right: 65px;
         border-radius: 18px;
-        margin: 20px;
-        font-size: 64px;
+        margin: 8px;
+        font-size: 48px;
+    }
 
-        p {
-            line-height: 30px;
-            opacity: 0.9;
-            letter-spacing: 1px;
-        }
+    .VersionInfo {
+        flex-direction: row;
+        align-items: flex-end;
+        gap: 6px;
     }
 
     #mdBox {
@@ -244,6 +246,22 @@ h1 {
 
     .content {
         padding: 20px 72px;
+    }
+
+    .btnBox {
+        flex-direction: row;
+
+        button, button:hover, button:disabled {
+            width: fit-content;
+            width: -moz-fit-content;
+        }
+    }
+
+    .Info {
+        padding-right: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     div#brands {
@@ -291,7 +309,6 @@ h1 {
 
     #pagetitle,
     .authors,
-    #collapsibleBtn,
     .changelogs {
         padding-top: 1em;
         padding-bottom: 1em;
@@ -300,12 +317,16 @@ h1 {
         border-radius: 18px;
         margin: 8px;
         font-size: 48px;
+    }
 
-        p {
-            line-height: 26px;
-            opacity: 0.9;
-            letter-spacing: 0.5px;
-        }
+    #collapsibleBtn {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 18px;
+        margin: 8px;
+        font-size: 48px;
     }
 
     #mdBox {
@@ -334,6 +355,28 @@ h1 {
 
     .content {
         padding: 20px;
+    }
+
+    .VersionInfo {
+        flex-direction: row;
+        align-items: flex-end;
+        gap: 6px;
+    }
+
+    .btnBox {
+        flex-direction: row;
+
+        button, button:hover, button:disabled {
+            width: fit-content;
+            width: -moz-fit-content;
+        }
+    }
+
+    .Info {
+        padding-right: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     div#brands {
@@ -368,13 +411,21 @@ h1 {
 }
 
 @media (max-width: 500px) {
-
     #pagetitle,
     .authors,
-    #collapsibleBtn,
     .changelogsd {
         padding-top: 1em;
         padding-bottom: 1em;
+        padding-left: 20px;
+        padding-right: 20px;
+        border-radius: 18px;
+        margin: 8px;
+        font-size: 48px;
+    }
+
+    #collapsibleBtn {
+        padding-top: 15px;
+        padding-bottom: 15px;
         padding-left: 20px;
         padding-right: 20px;
         border-radius: 18px;
@@ -429,6 +480,27 @@ h1 {
         }
     }
 
+    .btnBox {
+        flex-direction: column;
+        gap: 8px;
+
+        button, button:hover, button:disabled {
+            width: calc(100% + 10px);
+        }
+
+        button:disabled {
+            border: solid 1px #86868a;
+        }
+    }
+
+    .Info {
+        padding-right: 10px;
+        display: flex;
+        gap: 10px;
+        flex-direction: row;
+        align-items: center;
+    }
+
     .content {
         padding: 20px;
     }
@@ -438,6 +510,12 @@ h1 {
         flex-direction: column;
         flex-wrap: wrap;
         gap: 10px;
+    }
+
+    .VersionInfo {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
     }
 
     .brandBtn {
