--- a/style/menu.css
+++ b/style/menu.css
@@ -6,6 +6,7 @@ header {
     z-index: 6;
     font-family: Wix Madefor Display, sans-serif;
     align-items: center;
+    transition: all .3s ease-in-out;
 
     #downloadBtn {
         fill: var(--on-background);
