--- a/style/device.css
+++ b/style/device.css
@@ -281,6 +281,8 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 28px;
+    opacity: 0;
+    transition: all .5s ease-in-out;
 }
 
 .headshot {
@@ -402,8 +404,8 @@ h2 {
 
 .statusIcon,
 #statusIcon {
-    width: 32px;
-    height: 32px;
+    width: 26px;
+    height: 26px;
 }
 
 .statusInfo {
@@ -526,7 +528,7 @@ button:hover {
                 color: #86868a;
                 font-size: 16px;
             }
-    
+
             p {
                 margin: 0;
                 color: #86868a;
@@ -542,4 +544,72 @@ button:hover {
     font-weight: 250;
     color: var(--on-background);
     line-height: 22px;
+}
+
+.loader {
+        position: fixed;
+        width: 40px;
+        align-self: center;
+        left: calc(50% - 20px);
+        top: calc(50% - 20px);
+        transition: all .3s ease-in-out;
+
+    &:before {
+        content: '';
+        display: block;
+        padding-top: 100%;
+    }
+}
+
+.circular {
+    animation: rotate 2s linear infinite;
+    height: 100%;
+    transform-origin: center center;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke: var(--primary-color);
+    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+    stroke-linecap: square;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
+}
+
+.showbox {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 5%;
 }
